fixed preface top padding on smaller screens

--- a/assets/css/sass/blocks/_preface.scss
+++ b/assets/css/sass/blocks/_preface.scss
@@ -1,6 +1,7 @@
 .preface {
-    body.home & {
-        padding-top: 6.75rem;
+    padding-top: 2rem;
+    @include media($md) {
+        padding-top: rem(190); //masthead height
     }
 }
 .preface-text {
