--- a/assets/css/sass/views/_front-page.scss
+++ b/assets/css/sass/views/_front-page.scss
@@ -1,6 +1,9 @@
 body.home {
     .preface {
-        padding-top: 6.75rem;
+        padding-top: 0;
+        @include media($md) {
+            padding-top: 6.75rem;
+        }
     }
     .preface-text {
         @extend .h4;
